# reflection_agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  llm_strategies.py  settings.py
examples/: annotated_ids.py
graph/: __init__.py  chains.py  graph.py  nodes.py  prompts.py  state.py
src/reflection_agent/: __init__.py  __main__.py  cli.py  logging.py
src/reflection_agent/config/: __init__.py  llm_strategies.py  settings.py
src/reflection_agent/exceptions/: __init__.py  base.py
src/reflection_agent/graph/: __init__.py  builder.py  chains.py  nodes.py  prompts.py  state.py
tests/: conftest.py
tests/integration/: test_full_graph.py
tests/unit/: test_chains.py  test_exceptions.py  test_graph_builder.py  test_llm_strategies.py  test_nodes.py  test_settings.py
