[project]
name = "reflection-agent"
version = "0.1.0"
description = "LangGraph reflection agent (generate → reflect loop) with LLMOps-friendly layout"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "isort>=8.0.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=0.2.0",
    "python-dotenv>=1.2.1",
]
